vbnc/vbnc/tests/Errors/30002-3.vb
Class T
    Public Function F() As A.B.D

    End Function

End Class
Class A
    Public Class B
        Public Class C

        End Class
    End Class
End Class